--- a/package.json
+++ b/package.json
@@ -1,30 +1,47 @@
 {
   "name": "weather-app",
   "version": "1.0.0",
-  "description": "A Web App to show Weather.",
-  "main": "index.html",
-  "dependencies": {},
-  "devDependencies": {
-    "react-hot-loader": "^1.3.0",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
-  },
+  "description": "A web app to show weather",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "lint": "eslint src"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ishanjain28/Weather-App.git"
+    "url": "https://github.com/ishanjain28/Weather-App.git"
   },
   "keywords": [
-    "Weather",
-    "React",
-    "WebAPp"
+    "react",
+    "reactjs",
+    "boilerplate",
+    "hot",
+    "reload",
+    "hmr",
+    "live",
+    "edit",
+    "webpack"
   ],
-  "author": "Ishan Jain",
+  "author": "Ishan Jain <ishanjain28@gmail.com> (https://github.com/ishanjain28)",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/ishanjain28/Weather-App/issues"
   },
-  "homepage": "https://github.com/ishanjain28/Weather-App#readme"
+  "homepage": "https://github.com/ishanjain28/Weather-App#readme",
+  "devDependencies": {
+    "babel-core": "^6.0.20",
+    "babel-eslint": "^4.1.3",
+    "babel-loader": "^6.0.1",
+    "babel-preset-es2015": "^6.0.15",
+    "babel-preset-react": "^6.0.15",
+    "babel-preset-stage-0": "^6.0.15",
+    "eslint": "^1.10.3",
+    "eslint-plugin-react": "^3.6.2",
+    "react-hot-loader": "^1.3.0",
+    "webpack": "^1.12.2",
+    "webpack-dev-server": "^1.12.1"
+  },
+  "dependencies": {
+    "react": "^0.14.6",
+    "react-dom": "^0.14.6"
+  }
 }
