--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-preset-stage-0": "^6.0.15",
     "eslint": "^1.10.3",
     "eslint-plugin-react": "^3.6.2",
+    "jquery": "^3.0.0",
     "react": "^15.1.0",
     "react-addons-css-transition-group": "^15.1.0",
     "react-dom": "^15.1.0",
@@ -44,6 +45,7 @@
     "webpack-dev-server": "^1.12.1"
   },
   "dependencies": {
+    "jquery": "^3.0.0",
     "react": "^15.1.0",
     "react-addons-css-transition-group": "^15.1.0",
     "react-dom": "^15.1.0"
